--- a/index.html
+++ b/index.html
@@ -3,103 +3,167 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growfax Downloads & Discord</title>
+    <title>Growfax | Download & Komunitas</title>
     <style>
+        /* Gaya Dasar & Reset */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
-            margin: 20px;
-            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            background-color: #1a1a2e; /* Latar belakang gelap */
+            color: #fff; /* Teks putih */
+            line-height: 1.6;
         }
+
+        /* Kontainer Utama */
         .container {
-            max-width: 800px;
-            margin: auto;
-            background-color: #fff;
+            max-width: 1000px;
+            margin: 40px auto;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #2c2c54; /* Kontainer agak gelap */
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
         }
+
+        /* Banner */
         .banner {
             width: 100%;
             height: auto;
-            max-height: 300px; /* Batasan tinggi untuk banner */
+            max-height: 350px;
             object-fit: cover;
-            border-radius: 5px;
-            margin-bottom: 20px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
+
+        /* Judul */
+        h1 {
+            color: #6a89cc; /* Warna judul yang menonjol */
+            margin-bottom: 5px;
+        }
+
+        h2 {
+            color: #b8e994; /* Warna subjudul */
+            margin-top: 30px;
+            margin-bottom: 25px;
+        }
+
+        /* Grup Tombol (Responsif) */
         .button-group {
             display: flex;
-            flex-wrap: wrap; /* Mengizinkan tombol pindah baris pada layar kecil */
+            flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
+            gap: 25px;
+            padding: 10px;
         }
-        .download-button, .discord-button {
+
+        /* Gaya Tombol Umum */
+        .action-button {
             display: flex;
             flex-direction: column;
             align-items: center;
             text-decoration: none;
-            color: #333;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-            width: 150px; /* Lebar tombol yang seragam */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            border-radius: 12px;
+            transition: transform 0.3s, box-shadow 0.3s;
+            width: 250px; /* Lebar tetap untuk desktop */
+            min-width: 150px; /* Lebar minimum untuk mobile */
+            color: #fff;
+            font-weight: bold;
         }
-        .download-button {
-            background-color: #e0e0e0;
+
+        .action-button:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+        }
+
+        /* Gaya Tombol Khusus */
+        .windows-button {
+            background: linear-gradient(135deg, #1e90ff, #005ce6); /* Biru Windows */
+        }
+        .virtualhost-button {
+            background: linear-gradient(135deg, #ff6b6b, #ee5253); /* Merah/Oranye */
         }
         .discord-button {
-            background-color: #7289da; /* Warna Discord */
-            color: white;
+            background: linear-gradient(135deg, #7289da, #5865f2); /* Warna Discord */
         }
-        .download-button:hover {
-            background-color: #ccc;
-        }
-        .discord-button:hover {
-            background-color: #677bc4;
-        }
+
+        /* Gaya Ikon */
         .button-icon {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 5px;
-            border-radius: 50%; /* Membuat ikon bulat */
+            width: 70px;
+            height: 70px;
+            margin-bottom: 10px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            padding: 5px;
             object-fit: cover;
         }
-        .discord-icon {
-            border-radius: 0; /* Biarkan ikon Discord tidak bulat jika perlu */
+
+        .button-text {
+            font-size: 1.2em;
+            margin-top: 5px;
+        }
+
+        .small-text {
+            font-size: 0.9em;
+            font-weight: normal;
+            opacity: 0.8;
+        }
+
+        /* Media Query untuk Responsif (Mobile) */
+        @media (max-width: 600px) {
+            .container {
+                margin: 20px 10px;
+                padding: 15px;
+            }
+            .action-button {
+                width: 100%; /* Tombol penuh lebar di mobile */
+                max-width: 300px;
+            }
+            .button-group {
+                gap: 15px;
+            }
+            .button-icon {
+                width: 60px;
+                height: 60px;
+            }
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Selamat Datang di Growfax</h1>
+    <h1>🚀 Growfax Official</h1>
+    <p>Pusat download resmi dan komunitas.</p>
 
     <img src="Growfax_banner.jpg" alt="Growfax Banner" class="banner">
 
-    <h2>Pilih Download Anda:</h2>
+    <h2>Pilih Platform untuk Mulai Bermain:</h2>
 
     <div class="button-group">
 
-        <a href="Growfax_Patched_.bat" download class="download-button">
+        <a href="Growfax_Patched_.bat" download class="action-button windows-button">
             <img src="windows.png" alt="Windows Logo" class="button-icon">
-            <span>**Growfax Windows**<br>(File .bat)</span>
+            <span class="button-text">PLAY on Windows</span>
+            <span class="small-text">(File .bat)</span>
         </a>
 
-        <a href="Growfax_VirtualHost.txt" download class="download-button">
+        <a href="Growfax_VirtualHost.txt" download class="action-button virtualhost-button">
             <img src="virtual-host.png" alt="Virtual Host Logo" class="button-icon">
-            <span>**Virtual Host File**<br>(File .txt)</span>
+            <span class="button-text">PLAY on Virtual Host</span>
+            <span class="small-text">(File .txt)</span>
         </a>
 
-        <a href="https://discord.gg/smgS6sq83y" target="_blank" class="discord-button">
-            <img src="discord.jpeg" alt="Discord Logo" class="button-icon discord-icon">
-            <span>**JOIN DISCORD**<br>(Komunitas)</span>
+        <a href="https://discord.gg/smgS6sq83y" target="_blank" class="action-button discord-button">
+            <img src="discord.jpeg" alt="Discord Logo" class="button-icon">
+            <span class="button-text">JOIN DISCORD</span>
+            <span class="small-text">Gabung Komunitas Kami!</span>
         </a>
 
     </div>
 
-    <p style="margin-top: 30px; font-size: small;">Pastikan semua file gambar dan download berada di folder yang sama.</p>
+    <p style="margin-top: 40px; font-size: small; opacity: 0.7;">© 2023 Growfax. Pastikan semua file berada di direktori yang sama.</p>
 
 </div>
 
