--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
             color: var(--primary-color);
         }
 
-        /* Language Switcher Styles */
+        /* Language Switcher Styles - DIKOREKSI DI SINI */
         .language-switcher {
             display: flex;
             gap: 10px;
+            /* Pastikan teks tombol tidak terpengaruh oleh terjemahan */
+            z-index: 1000; 
         }
 
         .lang-button {
@@ -65,6 +67,9 @@
             transition: background-color 0.3s, border-color 0.3s;
             text-decoration: none;
             font-size: 0.9em;
+            /* Memastikan teks tombol tidak ikut terjemahan GTranslate */
+            /* Ini penting untuk menjaga tombol tetap "ID" dan "EN" */
+            line-height: 1; 
         }
 
         .lang-button:hover {
@@ -77,7 +82,7 @@
             border-color: var(--primary-color);
         }
         
-        /* Container, Banner, Button Group, Footer Styles (Disesuaikan) */
+        /* Konten Lain (Sama seperti sebelumnya) */
         .container {
             max-width: 1200px;
             margin: auto;
@@ -246,7 +251,6 @@
     // Fungsi untuk memicu terjemahan
     function doGTranslate(lang_pair) {
         if (typeof GTranslateGetCurrentLang == 'function' && GTranslateGetCurrentLang() == null) {
-            // Muat skrip jika belum ada
             var script = document.createElement('script');
             script.type = 'text/javascript';
             script.src = '//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit';
@@ -263,10 +267,8 @@
         var te_element = document.getElementById('google_translate_element');
         if (te_element) te_element.innerHTML = '';
         
-        // Inisialisasi Google Translate dengan bahasa sumber ENGLISH ('en')
         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 
-        // Pindahkan bahasa tujuan setelah inisialisasi
         setTimeout(function() {
             var select = document.querySelector('select.goog-te-combo');
             if (select) {
@@ -283,6 +285,7 @@
     // Fungsi untuk memperbarui tampilan tombol yang aktif
     function updateActiveButton(lang) {
         document.querySelectorAll('.lang-button').forEach(btn => btn.classList.remove('active'));
+        // Mencocokkan berdasarkan kode bahasa target (ID atau EN)
         if (lang === 'id') {
             document.querySelector('.language-switcher a:first-child').classList.add('active');
         } else if (lang === 'en') {
