--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-en="Growfax Official Download Center" data-id="Pusat Download Resmi Growfax">Growfax Official Download Center</title>
+    <title data-en="Growfax Official Download Center" data-id="Pusat Unduhan Resmi Growfax">Growfax Official Download Center</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
@@ -41,6 +41,7 @@
         .main-content { padding-bottom: 60px; }
         .banner-section { background-color: var(--surface-dark); border-radius: 12px; overflow: hidden; margin-bottom: 40px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); }
         .banner-section img { width: 100%; height: auto; max-height: 200px; object-fit: cover; display: block; }
+        
         h2 { font-size: 2.2em; color: var(--text-light); margin-bottom: 10px; }
         .description { color: var(--text-muted); font-size: 1.1em; margin-bottom: 40px; }
 
@@ -76,17 +77,13 @@
         .virtualhost-button { background-color: #F9A825; }
         .discord-button { background-color: var(--discord-color); }
 
-        /* PERUBAHAN UTAMA UNTUK MENGHILANGKAN BUG PADA GAMBAR */
         .button-icon {
             width: 50px; 
             height: 50px;
             margin-bottom: 10px;
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: **5px**; /* Dibuat sedikit rounded corner, BUKAN lingkaran 50% */
+            border-radius: 5px; 
             padding: 5px;
-            /* object-fit: cover tetap dipertahankan jika gambar bukan persegi 1:1, 
-               tetapi jika gambar Anda adalah logo dengan aspek rasio yang jelas, 
-               Anda bisa mengubahnya menjadi 'contain' atau menghapusnya */
             object-fit: contain; 
         }
 
@@ -133,27 +130,27 @@
         <img src="Growfax_banner.jpg" alt="Growfax Official Banner">
     </div>
 
-    <h2 data-en="GET STARTED. CHOOSE YOUR PLATFORM." data-id="MULAI. PILIH PLATFORM ANDA.">GET STARTED. CHOOSE YOUR PLATFORM.</h2>
-    <p class="description" data-en="Download the necessary files and join our official community on Discord." data-id="Unduh file yang diperlukan dan bergabunglah dengan komunitas resmi kami di Discord.">Download the necessary files and join our official community on Discord.</p>
+    <h2 data-en="GET STARTED. SELECT YOUR PLATFORM." data-id="MULAI. PILIH PLATFORM ANDA.">GET STARTED. SELECT YOUR PLATFORM.</h2>
+    <p class="description" data-en="Download the required assets and join our official community on Discord." data-id="Unduh aset yang dibutuhkan dan bergabunglah dengan komunitas resmi kami.">Download the required assets and join our official community on Discord.</p>
 
     <div class="button-group">
 
         <a href="Growfax_Patched_.bat" download class="action-button windows-button">
             <img src="windows.png" alt="Windows Logo" class="button-icon">
-            <span class="button-text" data-en="PLAY on Windows" data-id="MAIN di Windows">PLAY on Windows</span>
-            <span class="small-text" data-en="Download Installer (.BAT)" data-id="Unduh Pemasang (.BAT)">Download Installer (.BAT)</span>
+            <span class="button-text" data-en="DOWNLOAD for Windows" data-id="UNDUH untuk Windows">DOWNLOAD for Windows</span>
+            <span class="small-text" data-en="Secure Installer (.BAT)" data-id="Pemasang Aman (.BAT)">Secure Installer (.BAT)</span>
         </a>
 
         <a href="Growfax_VirtualHost.txt" download class="action-button virtualhost-button">
             <img src="virtual-host.png" alt="Virtual Host Logo" class="button-icon">
-            <span class="button-text" data-en="PLAY on Virtual Host" data-id="MAIN di Virtual Host">PLAY on Virtual Host</span>
-            <span class="small-text" data-en="Download Host Configuration (.TXT)" data-id="Unduh Konfigurasi Host (.TXT)">Download Host Configuration (.TXT)</span>
+            <span class="button-text" data-en="HOSTING via Virtual Host" data-id="HOSTING melalui Virtual Host">HOSTING via Virtual Host</span>
+            <span class="small-text" data-en="Configuration File (.TXT)" data-id="File Konfigurasi Host (.TXT)">Configuration File (.TXT)</span>
         </a>
 
         <a href="https://discord.gg/smgS6sq83y" target="_blank" class="action-button discord-button">
             <img src="discord.jpeg" alt="Discord Logo" class="button-icon">
             <span class="button-text" data-en="JOIN DISCORD" data-id="GABUNG DISCORD">JOIN DISCORD</span>
-            <span class="small-text" data-en="Meet Our Community!" data-id="Temui Komunitas Kami!">Meet Our Community!</span>
+            <span class="small-text" data-en="Connect with Our Community." data-id="Terhubung dengan Komunitas Kami.">Connect with Our Community.</span>
         </a>
 
     </div>
